--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE_URL="postgres://localhost/gh-projects-sprint-report_development?sslmode=disable"
-GH_PROJECT_URLS='https://github.com/orgs/department-of-veterans-affairs/projects/927'
+SEED_GH_PROJECT_URLS='https://github.com/orgs/department-of-veterans-affairs/projects/927'
