--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL="postgres://localhost/gh-projects-sprint-report_development?sslmode=disable"
+DATABASE_URL="postgres://localhost/sprintosaurus_development?sslmode=disable"
+TEST_DATABASE_URL="postgres://localhost/sprintosaurus_test?sslmode=disable"
 SEED_GH_PROJECT_URLS='https://github.com/orgs/department-of-veterans-affairs/projects/927'
